tests/error/py_errors/too_many_args.py
from tests.error.util import guppy


@guppy
def foo() -> int:
    return py(1, 2)
